--- a/config/amazon_s3.yml
+++ b/config/amazon_s3.yml
@@ -1,16 +1,16 @@
 development:
-  bucket: bookcamping
+  bucket: despachodepan
   access_key_id: AKIAJEYGNZI3ZGKEZ5LQ
   secret_access_key: 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
 
 test:
-  bucket: bookcamping-test
+  bucket: despachodepan-test
   access_key_id: AKIAJEYGNZI3ZGKEZ5LQ
   secret_access_key: 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
 
 
 production:
-  bucket: bookcamping
+  bucket: despachodepan
   access_key_id: AKIAJEYGNZI3ZGKEZ5LQ
   secret_access_key: 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
 
