Better migrations. DB backup

--- a/config/amazon_s3.yml
+++ b/config/amazon_s3.yml
@@ -1,5 +1,5 @@
 development:
-  bucket: despachodepan
+  bucket: depan
   access_key_id: AKIAJEYGNZI3ZGKEZ5LQ
   secret_access_key: 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
 
@@ -10,7 +10,7 @@ test:
 
 
 production:
-  bucket: despachodepan
+  bucket: depan
   access_key_id: AKIAJEYGNZI3ZGKEZ5LQ
   secret_access_key: 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
 
