Staging environment to test caching. About path removed, finally

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ config/database.yml
 config/despachodepan.yml
 config/newrelic.yml
 public/assets/**
+public/cache/**
 public/uploads
 public/media
 media
