--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -7,6 +7,8 @@ server {
     server_name despachodepan.recortable.net despachodepan.com;
     root /home/deploy/Despachodepan/current/public;
     passenger_enabled off;
+    client_max_body_size 4M;
+    client_body_buffer_size 128k;
 
     try_files $uri/index.html $uri @unicorn;
     location @unicorn {
